--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.1",
     "expo": "~49.0.15",
+    "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-alert": "^1.0.3",
+    "react-native-paper": "^5.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
